--- a/css/gallery.css
+++ b/css/gallery.css
@@ -22,7 +22,7 @@
 }
 
 .gallery .view-button{
-    margin: 50px auto;
+    margin: 50px auto 0;
     background-color: var(--highlight-secondary-color);
     border-radius: 40px;
 }
