--- a/css/global.css
+++ b/css/global.css
@@ -31,6 +31,21 @@ body {
   color: var(--text-primary-color);
 }
 
+section{
+  margin: 0 auto 88px;
+}
+
+section.hero{
+  width: 100%;
+  margin: 0;
+
+}
+
+.section-title{
+  width: 280px;
+  margin: 0 auto 32px;
+}
+
 .section-title h2{
   font-size: 28px;
   font-weight: var(--title-weight);
@@ -63,6 +78,11 @@ body {
 
 
 @media screen and (min-width: 768px) {
+.section-title{
+  width: 100%;
+
+}
+
 .section-title h2{
   font-size: 32px;
 }
